--- a/terminos.html
+++ b/terminos.html
@@ -73,7 +73,7 @@
                                     <a class="nav-link" href="#contact">Contactos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Registrarse</a>
+                                    <a class="nav-link" href="registro.html">Registrarse</a>
                                 </li>
                             </ul>
                         </div>
@@ -121,7 +121,6 @@
                    <div class="footer_menu">
                       <ul>
                          <li><a href="#">Acerca de</a></li>
-                         <li><a href="#">Seguridad</a></li>
                          <li class="nav-item active"><a href="terminos.html">Términos</a></li>
                          <li><a href="politica.html">Política y Privacidad</a></li>
                          
