--- a/funciona.html
+++ b/funciona.html
@@ -42,18 +42,19 @@
 
       <style>
          .bd-placeholder-img {
-           font-size: 1.125rem;
-           text-anchor: middle;
-           -webkit-user-select: none;
-           -moz-user-select: none;
-           user-select: none;
-         }
-   
-         @media (min-width: 768px) {
-           .bd-placeholder-img-lg {
-             font-size: 3.5rem;
-           }
-         }
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+    }
+    
+
+    @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+        }
+    }
        </style>
 
 <header>
@@ -99,26 +100,29 @@
            </div>
        </div>
    </div>
-</header >
+</header>
+
+<div class="container position-relative">
+    <div class="row">
+        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="color: #f8f9fa;">
+            <div class="col-md-5 p-lg-5 mx-auto my-5">
+                <h1 class="display-4 fw-normal">Sistema de Geolocalización</h1>
+                <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
+                <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+            </div>
+            <!-- Contenedor adicional para los elementos product-device -->
+            <div class="product-device-container">
+                <div class="product-device product-device-2 shadow-sm d-none d-md-block" style="position: absolute; bottom: 0; left: 75px; z-index: 0; height: 500px;"></div>
+                <div class="product-device shadow-sm d-none d-md-block" style="position: absolute;  z-index: 0; height: 550px;"></div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-<main>
-   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="color: #f8f9fa;">
-       <div class="col-md-5 p-lg-5 mx-auto my-5">
-           <h1 class="display-4 fw-normal">Sistema de Geolocalización</h1>
-           <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
-           <a class="btn btn-outline-secondary" href="#">Coming soon</a>
-       </div>
-       <!-- Contenedor adicional para los elementos product-device -->
-       <div class="product-device-container">
-           <div class="product-device shadow-sm d-none d-md-block"></div>
-           <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-       </div>
-   </div>
-</main>
 
 
-<div id="service" class="service">
+<div id="service"  class="gallerys">
    <div class="row">
        <div class="col-md-12">
           <div class="titlepage">
@@ -185,7 +189,13 @@
 </div>
 
 <div class="container px-4 py-5" id="custom-cards">
-   <h2 class="pb-2 border-bottom">Custom cards</h2>
+    <div class="row">
+        <div class="col-md-12">
+           <div class="titlepage">
+              <h2>Versión <span class="green">móvil</span></h2>
+            </div>
+        </div>
+    </div>
 
    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
        <!-- Primera columna -->
@@ -195,13 +205,13 @@
      
        <!-- Segunda columna -->
        <div class="col">
-           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('images/movil-homepage.png'); height: 100px">
+           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('images/movil.png'); height: 100px">
                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"></div>
            </div>
        </div>
        <!-- Tercera columna -->
        <div class="col">
-           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('images/movil.png'); height: 100px"></div>
+           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('images/movil-homepage.png'); height: 100px"></div>
        </div>
    </div>
 </div>
