--- a/index.html
+++ b/index.html
@@ -366,38 +366,17 @@
                                  <div class="row">
                                     <div class="col-md-6">
                                        <div class="text_humai">
-                                          <span>Andres Acosta<i><img src="images/tett1.png" alt="#"/></i></span>
+                                          <span>Johan Sebastian<i><img src="images/ñaño.png" alt="#"/></i></span>
                                           <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
-                                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, repellendus minima incidunt nostrum itaque, reiciendis repudiandae ratione dolores consequatur amet in harum quidem temporibus maxime magnam eum mollitia accusantium adipisci!</p>
+                                          <p> ¡Brew Ride ha cambiado por completo mi forma de moverme por la ciudad! Antes solía preocuparme por llegar tarde a mis citas, pero ahora puedo confiar en que un conductor estará allí en cuestión de minutos. ¡Es como tener un chofer personal siempre disponible!
+                                          </p>
                                        </div>
                                     </div>
                                     <div class="col-md-6">
                                        <div class="text_humai">
-                                          <span>Fabián López<i><img src="images/tett2.png" alt="#"/></i></span>
+                                          <span>Alejandro Martinez<i><img src="images/yilmer.png" alt="#"/></i></span>
                                           <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
-                                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, repellendus minima incidunt nostrum itaque, reiciendis repudiandae ratione dolores consequatur amet in harum quidem temporibus maxime magnam eum mollitia accusantium adipisci!</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="carousel-item">
-                           <div class="container">
-                              <div class="carousel-caption relative">
-                                 <div class="row">
-                                    <div class="col-md-6">
-                                       <div class="text_humai">
-                                          <span>Carla Susana<i><img src="images/tett1.png" alt="#"/></i></span>
-                                          <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
-                                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, repellendus minima incidunt nostrum itaque, reiciendis repudiandae ratione dolores consequatur amet in harum quidem temporibus maxime magnam eum mollitia accusantium adipisci!</p>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                       <div class="text_humai">
-                                          <span>Victor Alfredo<i><img src="images/tett2.png" alt="#"/></i></span>
-                                          <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
-                                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, repellendus minima incidunt nostrum itaque, reiciendis repudiandae ratione dolores consequatur amet in harum quidem temporibus maxime magnam eum mollitia accusantium adipisci!</p>
+                                          <p>¡Increíble! Anoche perdí el último autobús y estaba preocupado por cómo iba a volver a casa. Entonces recordé que tenía la app de Brew Ride en mi teléfono. En menos de cinco minutos, un conductor me recogió y me llevó directo a mi puerta. ¡Fue un salvavidas!</p>
                                        </div>
                                     </div>
                                  </div>
@@ -410,16 +389,39 @@
                                  <div class="row">
                                     <div class="col-md-6">
                                        <div class="text_humai">
-                                          <span>Fernanda Molina<i><img src="images/tett1.png" alt="#"/></i></span>
+                                          <span>Jose Perafan<i><img src="images/yo.png" alt="#"/></i></span>
                                           <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
-                                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, repellendus minima incidunt nostrum itaque, reiciendis repudiandae ratione dolores consequatur amet in harum quidem temporibus maxime magnam eum mollitia accusantium adipisci!</p>
+                                          <p>Lo que más me gusta de Brew Ride es la seguridad que ofrece. Siempre puedo ver quién es mi conductor y qué vehículo está utilizando. Además, sé exactamente cuánto voy a pagar antes de subirme al auto. ¡Es genial no tener sorpresas desagradables al final del viaje!</p>
                                        </div>
                                     </div>
                                     <div class="col-md-6">
                                        <div class="text_humai">
-                                          <span>Josefina Albert<i><img src="images/tett2.png" alt="#"/></i></span>
+                                          <span>Felipe Gutierrez<i><img src="images/otaku.jpg" alt="#"/></i></span>
                                           <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
-                                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, repellendus minima incidunt nostrum itaque, reiciendis repudiandae ratione dolores consequatur amet in harum quidem temporibus maxime magnam eum mollitia accusantium adipisci!</p>
+                                          <p>¡Qué maravilla es Brew Ride! Además de la comodidad y la seguridad, también me encanta la variedad de opciones que ofrece. Desde viajes compartidos hasta autos de lujo, siempre puedo elegir la opción que mejor se adapte a mis necesidades y presupuesto.</p>
+                                       </div>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="carousel-item">
+                           <div class="container">
+                              <div class="carousel-caption relative">
+                                 <div class="row">
+                                    <div class="col-md-6">
+                                       <div class="text_humai">
+                                          <span>Temistocles Rodriguez<i><img src="images/ñaño2.png" alt="#"/></i></span>
+                                          <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
+                                          <p>Brew Ride ha simplificado tanto mis desplazamientos que ya no puedo imaginar cómo era antes. La posibilidad de programar viajes con anticipación me ha salvado en más de una ocasión, especialmente en días de mucho trabajo o eventos importantes.</p>
+                                       </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                       <div class="text_humai">
+                                          <span>Yilmer }
+                                             Alejandro<i><img src="images/yilmer2.png" alt="#"/></i></span>
+                                          <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
+                                          <p>Como conductor de Brew Ride, me encanta poder generar ingresos adicionales de manera flexible. La plataforma es transparente y justa, lo que me brinda tranquilidad y confianza mientras brindo un servicio de calidad a los usuarios. ¡Es una experiencia gratificante en todos los sentidos!.</p>
                                        </div>
                                     </div>
                                  </div>
@@ -482,8 +484,7 @@
                <div class="col-md-6">
                   <div class="map_main">
                      <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="345" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
-                     </div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63778.3878094353!2d-76.64121960626079!3d2.4573843128194346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e300311c028d47d%3A0x880bd67f0987a54e!2zUG9wYXnDoW4sIENhdWNh!5e0!3m2!1ses!2sco!4v1713205952840!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                     </div>
                   </div>
                </div>
             </div>
