--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     <a class="nav-link" href="#contact">Contactos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="registro.html">Registrarse</a>
+                                    <a class="nav-link" href="/loginmelo/index.html">Registrarse</a>
                                 </li>
                             </ul>
                         </div>
@@ -302,7 +302,7 @@
                              <div class="col-md-6">
                               <div class="choose_taital_main">
                                  <div class="choose_left">
-                                    <div class="choose_icon"><img src="images/manos.png" style="background-color: #ff0000; border-radius: 12px;"></div>
+                                    <div class="choose_icon"><img src="images/manos.png" style="background-color: #ff0000; border-radius: 12px; margin: 30px;"></div>
                                  </div>
                                  <div class="choose_right">
                                      <h2 class="focused_text">Compromiso</h2>
@@ -314,7 +314,7 @@
 
                                  <div class="choose_taital_main">
                                      <div class="choose_left">
-                                       <div class="choose_icon"><img src="images/taxi.png" style="background-color: #f7f707; border-radius: 12px;"></div>                                     </div>
+                                       <div class="choose_icon"><img src="images/taxi.png" style=" background-color: #f7f707; border-radius: 12px; margin: 30px;"></div>                                     </div>
                                      <div class="choose_right">
                                          <h2 class="focused_text">Servicio 24 horas</h2>
                                          <div class="titlepages">
@@ -325,7 +325,7 @@
 
                                  <div class="choose_taital_main">
                                      <div class="choose_left">
-                                         <div class="choose_icon"><img src="images/seguridad.png" style="background-color: #00FF00; border-radius: 12px;"></div>
+                                         <div class="choose_icon"><img src="images/seguridad.png" style="background-color: #001eff; border-radius: 12px; margin: 30px;"></div>
                                      </div>
                                      <div class="choose_right">
                                          <h2 class="focused_text">Viaje Sin Preocupaciones</h2>
@@ -336,7 +336,7 @@
                                  </div>
                              </div>
                              <div class="col-md-6 padding_0">
-                                 <div class="choose_img"><img src="images/logo-beber-carro.png" style="width: 450px; height: 450px; position: absolute; top: -45px;"></div>
+                                 <div class="choose_img"><img src="images/logo-beber-carro.png" style="width: 490px; height: 450px; position: absolute; top: -55px;"></div>
                              </div>
                          </div>
                      </div>
@@ -418,8 +418,7 @@
                                     </div>
                                     <div class="col-md-6">
                                        <div class="text_humai">
-                                          <span>Yilmer }
-                                             Alejandro<i><img src="images/yilmer2.png" alt="#"/></i></span>
+                                          <span>Yilmer Alejandro<i><img src="images/ñaño.png" alt="#"/></i></span>
                                           <img src="images/estrellas.png"  style="position: absolute; left: 165px; margin-top:17px;"  width="180px" height="180px" alt=""><span>Calificación:</span>
                                           <p>Como conductor de Brew Ride, me encanta poder generar ingresos adicionales de manera flexible. La plataforma es transparente y justa, lo que me brinda tranquilidad y confianza mientras brindo un servicio de calidad a los usuarios. ¡Es una experiencia gratificante en todos los sentidos!.</p>
                                        </div>
