--- a/funciona.html
+++ b/funciona.html
@@ -72,8 +72,8 @@
                    </div>
                </div>
                <div class="col-md-10 offset-md-1">
-                   <nav class="navigation navbar navbar-expand-md navbar-dark">
-                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                <nav class="navigation navbar navbar-expand-md navbar-dark" style="position: relative; z-index: 2;">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                            <span class="navbar-toggler-icon"></span>
                        </button>
                        <div class="collapse navbar-collapse" id="navbarsExample04">
@@ -104,7 +104,7 @@
 
 <div class="container position-relative">
     <div class="row">
-        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="color: #f8f9fa;">
+        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="color: #1d79d5;">
             <div class="col-md-5 p-lg-5 mx-auto my-5">
                 <h1 class="display-4 fw-normal">Sistema de Geolocalización</h1>
                 <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
@@ -112,8 +112,8 @@
             </div>
             <!-- Contenedor adicional para los elementos product-device -->
             <div class="product-device-container">
-                <div class="product-device product-device-2 shadow-sm d-none d-md-block" style="position: absolute; bottom: 0; left: 75px; z-index: 0; height: 500px;"></div>
-                <div class="product-device shadow-sm d-none d-md-block" style="position: absolute;  z-index: 0; height: 550px;"></div>
+                <div class="product-device product-device-2 shadow-sm d-none d-md-block" style="position: absolute; bottom: 0; left: 75px; z-index: 1; height: 500px;"></div>
+    <div class="product-device shadow-sm d-none d-md-block" style="position: absolute; z-index: 0; height: 550px;"></div>
             </div>
         </div>
     </div>
