--- a/funciona.html
+++ b/funciona.html
@@ -137,13 +137,19 @@
    
        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-4 py-5" style="margin-right: 100px; margin-left: 100px;">
            <div class="col d-flex align-items-start">
-               <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"/></svg>
+            <div class="house_icon">
+                <img src="images/boton-de-emergencia.png" class="image_2">
+             </div>
+               <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="boton"/></svg>
                <div>
                    <h4 class="fw-bold mb-0">Botón de seguridad</h4>
                    <p>Con nuestro botón puedes llamar a emergencia o compartir tu viaje. Estamos contigo en todo momento</p>
                </div>
            </div>
            <div class="col d-flex align-items-start">
+            <div class="house_icon">
+                <img src="images/marcador-de-ubicacion.png" class="image_2">
+             </div>
                <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"/></svg>
                <div>
                    <h4 class="fw-bold mb-0">Geolocalización</h4>
@@ -154,6 +160,9 @@
 
        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-4 py-5" style="margin-right: 100px; margin-left: 100px;">
            <div class="col d-flex align-items-start">
+            <div class="house_icon">
+                <img src="images/vehiculo.png" class="image_2">
+             </div>
                <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"/></svg>
                <div>
                    <h4 class="fw-bold mb-0">Compartir viaje</h4>
@@ -161,6 +170,9 @@
                </div>
            </div>
            <div class="col d-flex align-items-start">
+            <div class="house_icon">
+                <img src="images/usuarios.png" class="image_2">
+             </div>
                <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"/></svg>
                <div>
                    <h4 class="fw-bold mb-0">Personas de confianzas</h4>
@@ -171,6 +183,9 @@
 
        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-4 py-5" style="margin-right: 100px; margin-left: 100px;">
            <div class="col d-flex align-items-start">
+            <div class="house_icon">
+                <img src="images/chat.png" class="image_2">
+             </div>
                <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"/></svg>
                <div>
                    <h4 class="fw-bold mb-0">Comunicación 24/7</h4>
@@ -178,6 +193,9 @@
                </div>
            </div>
            <div class="col d-flex align-items-start">
+            <div class="house_icon">
+                <img src="images/obediente.png" class="image_2">
+             </div>
                <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"/></svg>
                <div>
                    <h4 class="fw-bold mb-0">Seguridad de datos</h4>
@@ -232,9 +250,9 @@
                    <h2 class="useful_text">Compañía</h2>
                    <div class="footer_menu">
                       <ul>
-                         <li><a href="#">Acerca de</a></li>
+                         <li><a href="acercaDe.html">Acerca de</a></li>
                          <li><a href="terminos.html">Términos</a></li>
-                         <li class="nav-item active"><a href="politica.html">Política y Privacidad</a></li>
+                         <li class="nav-item"><a href="politica.html">Política y Privacidad</a></li>
                          
                       </ul>
                    </div>
