--- a/politica.html
+++ b/politica.html
@@ -120,7 +120,7 @@
                    <h2 class="useful_text">Compañía</h2>
                    <div class="footer_menu">
                       <ul>
-                         <li><a href="#">Acerca de</a></li>
+                         <li><a href="acercaDe.html">Acerca de</a></li>
                          <li><a href="terminos.html">Términos</a></li>
                          <li class="nav-item active"><a href="politica.html">Política y Privacidad</a></li>
                          
